Bug 1870973 - Back out changeset 3ff9d913d60a (bug 1862249) due to line-wrapping regressions.  a=dmeehan

This reverts the change to make ideographic space trimmable, because of unintended impact on line
breaking and measurement in other cases. We'll need a more carefully targeted fix for the original
issue in bug 1862249, as well as better test coverage when landing a new patch there.

(Given that we've had multiple regression reports about this, I think we should uplift the backout
to 122. We could even consider it for a 121.x dot-release if one happens, as it's just reverting
to longstanding behavior here.)

Original Revision: https://phabricator.services.mozilla.com/D197150

Differential Revision: https://phabricator.services.mozilla.com/D197196